// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ARTICLECARDS LARGE COMPONENT renderes correctly 1`] = `
<div
  className="md:flex w-full h-full col-span-6 group shadow-sm hover:shadow-2xl dark:shadow-none transition ease-in-out duration-200 rounded-2xl"
>
  <div
    className="shadow-2xl rounded-2xl transition ease-in-out duration-200 bg-gray-300 dark:bg-neutral-600 text-black dark:text-white w-full h-full z-20"
  >
    <div
      className="flex flex-col md:flex-row md:h-72 lg:h-96"
    >
      <div
        className="relative rounded-t-2xl md:rounded-l-2xl md:rounded-tr-none md:w-1/2 lg:w-2/3 overflow-hidden"
      >
        <div
          className="transition h-56 md:h-full ease-in-out duration-200 group-hover:grayscale-0 grayscale-30 filter"
          href="/articles/articleDir"
          onClick={[Function]}
          onMouseEnter={[Function]}
          onTouchStart={[Function]}
        >
          <span
            style={
              {
                "background": "none",
                "border": 0,
                "bottom": 0,
                "boxSizing": "border-box",
                "display": "block",
                "height": "initial",
                "left": 0,
                "margin": 0,
                "opacity": 1,
                "overflow": "hidden",
                "padding": 0,
                "position": "absolute",
                "right": 0,
                "top": 0,
                "width": "initial",
              }
            }
          >
            <img
              alt="alt"
              className="rounded-t-2xl h-full md:rounded-l-2xl md:rounded-tr-none group-hover:scale-110 transform-gpu transition ease-in-out duration-200 cursor-pointer"
              data-nimg="fill"
              decoding="async"
              onError={[Function]}
              onLoad={[Function]}
              src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7"
              style={
                {
                  "backgroundImage": "url("AAAAAAAAAAAA")",
                  "backgroundPosition": "0% 0%",
                  "backgroundSize": "cover",
                  "border": "none",
                  "bottom": 0,
                  "boxSizing": "border-box",
                  "display": "block",
                  "filter": "blur(20px)",
                  "height": 0,
                  "left": 0,
                  "margin": "auto",
                  "maxHeight": "100%",
                  "maxWidth": "100%",
                  "minHeight": "100%",
                  "minWidth": "100%",
                  "objectFit": "cover",
                  "objectPosition": undefined,
                  "padding": 0,
                  "position": "absolute",
                  "right": 0,
                  "top": 0,
                  "width": 0,
                }
              }
            />
            <noscript>
              <img
                alt="alt"
                className="rounded-t-2xl h-full md:rounded-l-2xl md:rounded-tr-none group-hover:scale-110 transform-gpu transition ease-in-out duration-200 cursor-pointer"
                data-nimg="fill"
                decoding="async"
                loading="lazy"
                sizes="100vw"
                src="/_next/image?url=https%3A%2F%2Fblog.kochie.io%2Ftest.webp&w=1200&q=75"
                srcSet="/_next/image?url=https%3A%2F%2Fblog.kochie.io%2Ftest.webp&w=320&q=75 320w, /_next/image?url=https%3A%2F%2Fblog.kochie.io%2Ftest.webp&w=420&q=75 420w, /_next/image?url=https%3A%2F%2Fblog.kochie.io%2Ftest.webp&w=768&q=75 768w, /_next/image?url=https%3A%2F%2Fblog.kochie.io%2Ftest.webp&w=1024&q=75 1024w, /_next/image?url=https%3A%2F%2Fblog.kochie.io%2Ftest.webp&w=1200&q=75 1200w"
                style={
                  {
                    "border": "none",
                    "bottom": 0,
                    "boxSizing": "border-box",
                    "display": "block",
                    "height": 0,
                    "left": 0,
                    "margin": "auto",
                    "maxHeight": "100%",
                    "maxWidth": "100%",
                    "minHeight": "100%",
                    "minWidth": "100%",
                    "objectFit": "cover",
                    "objectPosition": undefined,
                    "padding": 0,
                    "position": "absolute",
                    "right": 0,
                    "top": 0,
                    "width": 0,
                  }
                }
              />
            </noscript>
          </span>
        </div>
        <div
          className="absolute p-4 bottom-0 md:right-0 md:top-0 md:p-4 md:bottom-0"
          style={
            {
              "height": "min-content",
            }
          }
        >
          <div
            className="undefined tagSet"
          >
            <div
              className="tag tag-common"
              href="/tags/tag1"
              onClick={[Function]}
              onMouseEnter={[Function]}
              onTouchStart={[Function]}
            >
              tag1
            </div>
          </div>
        </div>
      </div>
      <div
        className="p-4 md:w-1/2 lg:w-1/3 relative"
      >
        <h2
          className="heading text-2xl"
          href="/articles/articleDir"
          onClick={[Function]}
          onMouseEnter={[Function]}
          onTouchStart={[Function]}
        >
          title
        </h2>
        <p
          className="mt-2 mb-10"
        >
          the blurb
        </p>
        <div
          className="text-right absolute bottom-0 right-0 p-6"
        >
          <sub>
            1 min read
          </sub>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`ARTICLECARDS MEDIUM COMPONENT renderes correctly 1`] = `
<div
  className="md:col-span-3 col-span-6 w-full h-full group"
>
  <div
    className="shadow-2xl rounded-2xl transition ease-in-out duration-200 bg-gray-300 dark:bg-neutral-600 text-black dark:text-white w-full h-full z-20"
  >
    <div
      className="flex flex-col"
    >
      <div
        className="bg-black rounded-t-2xl relative overflow-hidden"
      >
        <div
          className="transition ease-in-out duration-200 group-hover:grayscale-0 grayscale-30 filter"
        >
          <span
            style={
              {
                "background": "none",
                "border": 0,
                "boxSizing": "border-box",
                "display": "block",
                "height": "initial",
                "margin": 0,
                "opacity": 1,
                "overflow": "hidden",
                "padding": 0,
                "position": "relative",
                "width": "initial",
              }
            }
          >
            <span
              style={
                {
                  "background": "none",
                  "border": 0,
                  "boxSizing": "border-box",
                  "display": "block",
                  "height": "initial",
                  "margin": 0,
                  "opacity": 1,
                  "padding": 0,
                  "paddingTop": "50%",
                  "width": "initial",
                }
              }
            />
            <img
              alt="alt"
              className="rounded-t-2xl group-hover:scale-110 transform-gpu transition ease-in-out duration-200 cursor-pointer"
              data-nimg="responsive"
              decoding="async"
              onError={[Function]}
              onLoad={[Function]}
              src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7"
              style={
                {
                  "backgroundImage": "url("AAAAAAAAAAAA")",
                  "backgroundPosition": "0% 0%",
                  "backgroundSize": "cover",
                  "border": "none",
                  "bottom": 0,
                  "boxSizing": "border-box",
                  "display": "block",
                  "filter": "blur(20px)",
                  "height": 0,
                  "left": 0,
                  "margin": "auto",
                  "maxHeight": "100%",
                  "maxWidth": "100%",
                  "minHeight": "100%",
                  "minWidth": "100%",
                  "objectFit": "cover",
                  "objectPosition": undefined,
                  "padding": 0,
                  "position": "absolute",
                  "right": 0,
                  "top": 0,
                  "width": 0,
                }
              }
            />
            <noscript>
              <img
                alt="alt"
                className="rounded-t-2xl group-hover:scale-110 transform-gpu transition ease-in-out duration-200 cursor-pointer"
                data-nimg="responsive"
                decoding="async"
                loading="lazy"
                sizes="100vw"
                src="/_next/image?url=https%3A%2F%2Fblog.kochie.io%2Ftest.webp&w=1200&q=75"
                srcSet="/_next/image?url=https%3A%2F%2Fblog.kochie.io%2Ftest.webp&w=320&q=75 320w, /_next/image?url=https%3A%2F%2Fblog.kochie.io%2Ftest.webp&w=420&q=75 420w, /_next/image?url=https%3A%2F%2Fblog.kochie.io%2Ftest.webp&w=768&q=75 768w, /_next/image?url=https%3A%2F%2Fblog.kochie.io%2Ftest.webp&w=1024&q=75 1024w, /_next/image?url=https%3A%2F%2Fblog.kochie.io%2Ftest.webp&w=1200&q=75 1200w"
                style={
                  {
                    "border": "none",
                    "bottom": 0,
                    "boxSizing": "border-box",
                    "display": "block",
                    "height": 0,
                    "left": 0,
                    "margin": "auto",
                    "maxHeight": "100%",
                    "maxWidth": "100%",
                    "minHeight": "100%",
                    "minWidth": "100%",
                    "objectFit": "cover",
                    "objectPosition": undefined,
                    "padding": 0,
                    "position": "absolute",
                    "right": 0,
                    "top": 0,
                    "width": 0,
                  }
                }
              />
            </noscript>
          </span>
        </div>
        <div
          className="absolute p-4 bottom-0"
        >
          <div
            className="undefined tagSet"
          >
            <div
              className="tag tag-common"
              href="/tags/tag1"
              onClick={[Function]}
              onMouseEnter={[Function]}
              onTouchStart={[Function]}
            >
              tag1
            </div>
          </div>
        </div>
      </div>
      <div
        className="p-4"
      >
        <h2
          className="heading text-2xl"
          href="/articles/articleDir"
          onClick={[Function]}
          onMouseEnter={[Function]}
          onTouchStart={[Function]}
        >
          title
        </h2>
        <p
          className="mb-8 mt-2"
        >
          the blurb
        </p>
        <div
          className="text-right absolute bottom-0 right-0 p-4"
        >
          <sub>
            1 min read
          </sub>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`ARTICLECARDS SMALL COMPONENT renderes correctly 1`] = `
<div
  className="md:col-span-3 lg:col-span-2 w-full h-full col-span-6 group"
>
  <div
    className="shadow-2xl rounded-2xl transition ease-in-out duration-200 bg-gray-300 dark:bg-neutral-600 text-black dark:text-white w-full h-full z-20"
  >
    <div
      className="flex flex-col"
    >
      <div
        className="relative bg-black rounded-t-2xl overflow-hidden"
      >
        <div
          className="transition ease-in-out duration-200 group-hover:grayscale-0 grayscale-30 filter"
        >
          <span
            style={
              {
                "background": "none",
                "border": 0,
                "boxSizing": "border-box",
                "display": "block",
                "height": "initial",
                "margin": 0,
                "opacity": 1,
                "overflow": "hidden",
                "padding": 0,
                "position": "relative",
                "width": "initial",
              }
            }
          >
            <span
              style={
                {
                  "background": "none",
                  "border": 0,
                  "boxSizing": "border-box",
                  "display": "block",
                  "height": "initial",
                  "margin": 0,
                  "opacity": 1,
                  "padding": 0,
                  "paddingTop": "50%",
                  "width": "initial",
                }
              }
            />
            <img
              alt="alt"
              className="rounded-t-2xl group-hover:scale-110 transform-gpu transition ease-in-out duration-200 cursor-pointer"
              data-nimg="responsive"
              decoding="async"
              onError={[Function]}
              onLoad={[Function]}
              src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7"
              style={
                {
                  "backgroundImage": "url("AAAAAAAAAAAA")",
                  "backgroundPosition": "0% 0%",
                  "backgroundSize": "cover",
                  "border": "none",
                  "bottom": 0,
                  "boxSizing": "border-box",
                  "display": "block",
                  "filter": "blur(20px)",
                  "height": 0,
                  "left": 0,
                  "margin": "auto",
                  "maxHeight": "100%",
                  "maxWidth": "100%",
                  "minHeight": "100%",
                  "minWidth": "100%",
                  "objectFit": "cover",
                  "objectPosition": undefined,
                  "padding": 0,
                  "position": "absolute",
                  "right": 0,
                  "top": 0,
                  "width": 0,
                }
              }
            />
            <noscript>
              <img
                alt="alt"
                className="rounded-t-2xl group-hover:scale-110 transform-gpu transition ease-in-out duration-200 cursor-pointer"
                data-nimg="responsive"
                decoding="async"
                loading="lazy"
                sizes="100vw"
                src="/_next/image?url=https%3A%2F%2Fblog.kochie.io%2Ftest.webp&w=1200&q=75"
                srcSet="/_next/image?url=https%3A%2F%2Fblog.kochie.io%2Ftest.webp&w=320&q=75 320w, /_next/image?url=https%3A%2F%2Fblog.kochie.io%2Ftest.webp&w=420&q=75 420w, /_next/image?url=https%3A%2F%2Fblog.kochie.io%2Ftest.webp&w=768&q=75 768w, /_next/image?url=https%3A%2F%2Fblog.kochie.io%2Ftest.webp&w=1024&q=75 1024w, /_next/image?url=https%3A%2F%2Fblog.kochie.io%2Ftest.webp&w=1200&q=75 1200w"
                style={
                  {
                    "border": "none",
                    "bottom": 0,
                    "boxSizing": "border-box",
                    "display": "block",
                    "height": 0,
                    "left": 0,
                    "margin": "auto",
                    "maxHeight": "100%",
                    "maxWidth": "100%",
                    "minHeight": "100%",
                    "minWidth": "100%",
                    "objectFit": "cover",
                    "objectPosition": undefined,
                    "padding": 0,
                    "position": "absolute",
                    "right": 0,
                    "top": 0,
                    "width": 0,
                  }
                }
              />
            </noscript>
          </span>
        </div>
        <div
          className="absolute p-4 bottom-0"
        >
          <div
            className="undefined tagSet"
          >
            <div
              className="tag tag-common"
              href="/tags/tag1"
              onClick={[Function]}
              onMouseEnter={[Function]}
              onTouchStart={[Function]}
            >
              tag1
            </div>
          </div>
        </div>
      </div>
      <div
        className="p-4 relative flex-grow"
      >
        <h2
          className="heading text-2xl"
          href="/articles/articleDir"
          onClick={[Function]}
          onMouseEnter={[Function]}
          onTouchStart={[Function]}
        >
          title
        </h2>
        <p
          className="mt-2 mb-10"
        >
          the blurb
        </p>
        <div
          className="text-right absolute bottom-0 right-0 p-6"
        >
          <sub>
            1 min read
          </sub>
        </div>
      </div>
    </div>
  </div>
</div>
`;
